--- a/src/app/view/backoffice/account/last-transactions/last-transactions.component.html
+++ b/src/app/view/backoffice/account/last-transactions/last-transactions.component.html
@@ -3,6 +3,12 @@
 
 <div class="main-container">
     <div class="pd-ltr-20">
+        <div class="card card-box mb-30">
+            <div class="card-body">
+                <h5 class="card-title weight-500">Saldo Disponible </h5>
+                <h6>${{dataAccount.ammount | numberFormat}}</h6>
+            </div>
+        </div>
         <div class="card-box mb-30">
             <div class="card-body">
                 <h2 class="h4 pd-20">Últimos movimientos</h2>
@@ -12,42 +18,22 @@
                             <th class="table-plus datatable-nosort">Fecha</th>
                             <th>Tipo</th>
                             <th>Descripción</th>
-                            <th>Banco</th>
+                            <th>Destinatario</th>
                             <th>Monto</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <tr *ngFor="let lt of dataLastMovements">
                             <td class="table-plus">
-                                <img src="vendors/images/product-1.jpg" width="70" height="70" alt="">
+                                {{lt.created | date}}
                             </td>
                             <td>
-                                <h5 class="font-16">Shirt</h5>
-                                by John Doe
+                                {{lt.type}}
                             </td>
-                            <td>Black</td>
-                            <td>M</td>
-                            <td>$1000</td>
-                            <td>1</td>
-                            <td>
-                                <div class="dropdown-menu dropdown-primary">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                    <div class="divider dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">Separated link</a>
-                                </div>
-                                <div class="dropdown">
-                                    <a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
-                                        <i class="dw dw-more"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-                                        <a class="dropdown-item" href="#"><i class="dw dw-eye"></i> View</a>
-                                        <a class="dropdown-item" href="#"><i class="dw dw-edit2"></i> Edit</a>
-                                        <a class="dropdown-item" href="#"><i class="dw dw-delete-3"></i> Delete</a>
-                                    </div>
-                                </div>
-                            </td>
+                            <td>{{ lt.description }}</td>
+                            <td>{{ lt.name }}</td>
+                            <td *ngIf="lt.type == 'Cargo' || lt.type == 'Transferencias a terceros' ">-${{ lt.ammount | numberFormat }} <i class="icon-copy dw dw-diagonal-arrow-18"></i></td>
+                            <td *ngIf="lt.type == 'Abono'" style="color: green;">${{ lt.ammount | numberFormat }}<i class="icon-copy dw dw-diagonal-arrow-21"></i></td>
                         </tr>
                     </tbody>
                 </table>
