--- a/src/app/view/backoffice/account/withdrawal/withdrawal.component.html
+++ b/src/app/view/backoffice/account/withdrawal/withdrawal.component.html
@@ -9,7 +9,7 @@
                 <div class="card card-box">
                     <div class="card-body">
                         <h5 class="card-title weight-500">Saldo Disponible </h5>
-                        <h6>${{40000 | numberFormat}}</h6>
+                        <h6>${{dataAccount.ammount | numberFormat}}</h6>
                     </div>
                 </div>
             </div>
