--- a/src/app/view/modals/new-transfer/new-transfer.component.html
+++ b/src/app/view/modals/new-transfer/new-transfer.component.html
@@ -8,36 +8,46 @@
     <div class="modal-body">
       <form [formGroup]="newTransfer" (ngSubmit)="onSubmit()" #formDirective="ngForm" class="p-5 bg-white">
         <div class="row form-group">
-          <div class="col-md-6 mb-3 mb-md-0">
+          <div class="col-md-6 mb-3">
             <label class="text-black" for="fname">Rut</label>
             <input type="text" formControlName="rut" formatRut class="form-control">
           </div>
-          <div class="col-md-6 mb-3 mb-md-0">
+          <div class="col-md-6 mb-3">
             <label class="text-black" for="name">Nombre</label> 
             <input type="text" formControlName="name" class="form-control" 
             [ngClass]="{ 'is-invalid': submitted && f.name.errors}" maxlength="100" >
           </div>
-          <div class="col-md-6 mb-3 mb-md-0">
-            <label class="text-black" for="account">Número de Cuenta</label> 
-            <input type="number" formControlName="account" class="form-control" 
-            [ngClass]="{ 'is-invalid': submitted && f.account.errors}" maxlength="100" >
+          <div class="col-md-12 mb-3">
+            <label class="text-black" for="email">Email</label> 
+            <input type="text" formControlName="email" class="form-control" 
+            [ngClass]="{ 'is-invalid': submitted && f.email.errors}" maxlength="100" >
           </div>
-          <div class="col-md-6 mb-3 mb-md-0">
+          <div class="col-md-6 mb-3">
+            <label class="text-black" for="account">Número de Cuenta</label> 
+            <input type="number" formControlName="account_number" class="form-control" 
+            [ngClass]="{ 'is-invalid': submitted && f.account_number.errors}" maxlength="100" >
+          </div>
+          <div class="col-md-6 mb-3">
             <label class="text-black" for="bankId">Banco</label> 
             <select formControlName="bankId" class="form-control"
              [ngClass]="{ 'is-invalid': submitted && f.bankId.errors}" >
               <option value="" disabled selected>Seleccione</option>
             </select>
           </div>
-          <div class="col-md-12 mb-3 mb-md-0">
+          <div class="col-md-12 mb-3">
             <label class="text-black" for="account">Monto a transferir</label> 
             <input type="number" formControlName="ammount" class="form-control" 
                 [ngClass]="{ 'is-invalid': submitted && f.ammount.errors}" maxlength="100">
           </div>
+          <div class="col-md-12 mb-3">
+            <label class="text-black" for="description">Comentario</label> 
+            <textarea type="" formControlName="description" class="form-control" 
+                [ngClass]="{ 'is-invalid': submitted && f.description.errors}" maxlength="100"></textarea>
+          </div>
         </div>
         <div class="row form-group">
           <div class="col-md-12">
-            <input type="submit" value="Registrar" class="btn btn-primary btn-md text-white">
+            <input type="submit" value="Transferir" class="btn btn-primary btn-md text-white">
           </div>
         </div>
       </form>
