--- a/src/app/view/backoffice/dashboard/dashboard.component.html
+++ b/src/app/view/backoffice/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
+
 <!-- <app-pre-load></app-pre-load> -->
+<app-header-bankoffice></app-header-bankoffice>
 <app-side-bar></app-side-bar>
 
 <div class="main-container">
@@ -13,7 +15,7 @@
                         Bienvenid@ <div class="weight-600 font-30 text-blue">{{user.name}}</div>
                     </h4>
                     <p class="font-18 max-width-600">
-                        asgasgasgsag
+                        ¡Estamos felices de verte de nuevo por aquí!
                     </p>
                 </div>
             </div>
