--- a/src/app/view/home/login/login.component.html
+++ b/src/app/view/home/login/login.component.html
@@ -1,37 +1,57 @@
-<section class="site-section bg-light" id="login">
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-12 text-center">
-          <h2 class="section-title mb-3">Ingresa a tu cuenta</h2>
-        </div>
+<div class="login-wrap d-flex align-items-center flex-wrap justify-content-center">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6 col-lg-7">
+        <img src="../../../../assets/images/login-page-img.png" alt="">
       </div>
-      <div class="row">
-        <div class="col-md-12 mb-5">
+      <div class="col-md-6 col-lg-5">
+        <div class="login-box bg-white box-shadow border-radius-10">
+          <div class="login-title">
+            <h2 class="text-center section-title">INGRESA A TU CUENTA</h2>
+          </div>
+          <div class="col-md-6 col-lg-7" align="center" style="margin-left: 20%;">
+            <img src="../../../../assets/images/logo_vertical_2.png" alt="" >
+          </div>
           <form [formGroup]="login" (ngSubmit)="onSubmit()" #formDirective="ngForm" class="p-5 bg-white">
-            <div class="row form-group">
-              <div class="col-md-12 mb-3 mb-md-0">
-                <label class="text-black" for="fname">Rut</label>
-                <input type="text" formControlName="rut" formatRut class="form-control" 
-                [ngClass]="{ 'is-invalid': submitted && f.rut.errors}" maxlength="15">
-                <div *ngIf="submitted && f.rut.errors">
-                  <div *ngIf="f.rut.errors.maxlength">El máximo de caracteres es 15</div>
-                  <div *ngIf="f.rut.errors.invalidRut">Ingrese un rut válido</div>
-                </div>
-              </div>
-              <div class="col-md-12 mb-3 mb-md-0">
-                <label class="text-black" for="password">Contraseña</label> 
-                <input type="password" formControlName="password" class="form-control" 
-                [ngClass]="{ 'is-invalid': submitted && f.password.errors}" maxlength="10" >
+            <div class="input-group custom">
+              <input type="text" class="form-control form-control-lg" placeholder="RUT" 
+              formControlName="rut" formatRut class="form-control" 
+              [ngClass]="{ 'is-invalid': submitted && f.rut.errors}" maxlength="15">
+              <div class="input-group-append custom">
+                <span class="input-group-text"><i class="icon-copy dw dw-user1"></i></span>
               </div>
             </div>
-            <div class="row form-group">
-              <div class="col-md-12">
-                <a routerLink="/cliente/dashboard" routerLinkActive="active" class="nav-link">Ingresar</a>
-                <input type="submit" value="Ingresar" class="btn btn-primary btn-md text-white">
+            <div *ngIf="submitted && f.rut.errors">
+              <div *ngIf="f.rut.errors.maxlength">El máximo de caracteres es 15</div>
+              <div *ngIf="f.rut.errors.invalidRut">Ingrese un rut válido</div>
+            </div>
+            <div class="input-group custom">
+              <input type="password" class="form-control form-control-lg" placeholder="**********" 
+              formControlName="password" class="form-control" 
+              [ngClass]="{ 'is-invalid': submitted && f.password.errors}" maxlength="10">
+              <div class="input-group-append custom">
+                <span class="input-group-text"><i class="dw dw-padlock1"></i></span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12" >
+                <div class="input-group mb-0" *ngIf="!load.login">
+                  <button class="btn btn-primary btn-lg btn-block" type="submit" >Ingresar</button>
+                </div>
+                <div class="font-16 weight-600 pt-10 pb-10 text-center" data-color="#707373" *ngIf="!load.login">O</div>
+                <div class="input-group mb-0">
+                  <a class="btn btn-primary btn-lg btn-block" routerLink="/nuevo-cliente" *ngIf="!load.login">Hazte Cliente</a>
+                </div>
+                <div class="font-16 weight-600 pt-10 pb-10 text-center" data-color="#707373" *ngIf="!load.login">O</div>
+                <div class="input-group mb-0">
+                  <a class="btn btn-primary btn-lg btn-block" routerLink="/" *ngIf="!load.login">Volver al inicio</a>
+                </div>
+                <h6 *ngIf="load.login"> <i class="fa fa-spinner fa-spin"></i> Ingresando a tu banco, espere por favor</h6>
               </div>
             </div>
           </form>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</div>
