--- a/src/app/view/backoffice/account/last-transactions/last-transactions.component.html
+++ b/src/app/view/backoffice/account/last-transactions/last-transactions.component.html
@@ -1,4 +1,5 @@
 <!-- <app-pre-load></app-pre-load> -->
+<app-header-bankoffice></app-header-bankoffice>
 <app-side-bar></app-side-bar>
 
 <div class="main-container">
@@ -13,7 +14,7 @@
         <div class="card-box mb-30">
             <div class="card-body">
                 <h2 class="h4 pd-20">Últimos movimientos</h2>
-                <table class="data-table table nowrap">
+                <table class="data-table table nowrap" >
                     <thead>
                         <tr>
                             <th class="table-plus datatable-nosort">Fecha</th>
@@ -27,7 +28,7 @@
                         <ng-container *ngIf="load.lastTransactions">
                             <tr *ngFor="let lt of dataLastMovements" >
                                 <td class="table-plus">
-                                    {{lt.created | date}}
+                                    {{lt.created | date:"dd/MM/yy HH:mm"}}
                                 </td>
                                 <td>
                                     {{lt.transactions_type.description}}
