--- a/src/app/view/backoffice/account/withdrawal/withdrawal.component.html
+++ b/src/app/view/backoffice/account/withdrawal/withdrawal.component.html
@@ -1,5 +1,5 @@
 <!-- <app-pre-load></app-pre-load> -->
-
+<app-header-bankoffice></app-header-bankoffice>
 <app-side-bar></app-side-bar>
 
 <div class="main-container">
