--- a/src/app/view/home/home/home.component.html
+++ b/src/app/view/home/home/home.component.html
@@ -17,20 +17,20 @@
             <ngb-carousel [showNavigationArrows]="false" [showNavigationIndicators]="true">
                 <ng-template ngbSlide>
                     <div class="picsum-img-wrapper">
-                        <h1 class="text-uppercase">Hazte cliente 100% online</h1>
-                        <p class="mb-50 desc">Cambiate a Banco RCC y podrás ingresar a un mundo de beneficios</p>
+                        <h1 class="text-uppercase" style="color: black;">Hazte cliente <br> 100% online</h1>
+                        <p class="mb-50 desc" style="color: black;">Cambiate a Banco RCC y podrás ingresar a un mundo de beneficios</p>
                     </div>
                 </ng-template>
                 <ng-template ngbSlide>
                     <div class="picsum-img-wrapper">
-                        <h1 class="text-uppercase">Invierte con nosotros</h1>
-                        <p class="mb-50 desc">Ofrecemos una tasa preferencial del 0.30% mensual en Dépositos a plazo.</p>
+                        <h1 class="text-uppercase" style="color: black;">Invierte con nosotros</h1>
+                        <p class="mb-50 desc" style="color: black;">Ofrecemos una tasa preferencial del 0.3% mensual en Depósitos a plazo.</p>
                     </div>
                 </ng-template>
                 <ng-template ngbSlide>
                     <div class="picsum-img-wrapper">
-                        <h1 class="text-uppercase">¿Necesitas una cuenta corriente?</h1>
-                        <p class="mb-50 desc">Banco RCC es tu aliado financiero.</p>
+                        <h1 class="text-uppercase" style="color: black;">¿Necesitas una cuenta corriente?</h1>
+                        <p class="mb-50 desc" style="color: black;">Banco RCC es tu aliado financiero.</p>
                     </div>
                 </ng-template>
             </ngb-carousel>
@@ -38,29 +38,34 @@
         </div>
     </div>
     <a href="#next" class="mouse smoothscroll">
-    <span class="mouse-icon">
-        <span class="mouse-wheel"></span>
-    </span>
+        <span class="mouse-icon" style="border-color: black;">
+            <span class="mouse-wheel" style="background-color: black;"></span>
+        </span>
     </a>
 </div>  
 
 <div class="site-section" id="next">
     <div class="container">
         <div class="row mb-5">
+            <div class="col-12 text-center" data-aos="fade">
+            <h2 class="section-title mb-3">¿POR QUE ELEGIRNOS?</h2>
+            </div>
+        </div>
+        <div class="row mb-5">
             <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="">
                 <img src="../../../assets/images/bank/flaticon-svg/svg/001-wallet.svg"  class="img-fluid w-25 mb-4">
-                <h3 class="card-title">Déposita tu dinero</h3>
-                <p>Con tu cuenta corriente podrás guardar, transferir, retirar tu dinero cuando quieras.</p>
+                <h3 class="card-title" >Depósita tu dinero</h3>
+                <p>Con tu cuenta corriente podrás guardar, transferir y retirar tu dinero cuando quieras.</p>
             </div>
             <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
                 <img src="../../../assets/images/bank/flaticon-svg/svg/004-cart.svg"  class="img-fluid w-25 mb-4">
                 <h3 class="card-title">Compras online</h3>
-                <p>Con tus tarjeta compra lo que quieras por internet</p>
+                <p>Con tus tarjetas compra lo que imaginas</p>
             </div>
             <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="200">
-                <img src="../../../assets/images/bank/flaticon-svg/svg/006-credit-card.svg"  class="img-fluid w-25 mb-4">
-                <h3 class="card-title">Tarjetas de crédito y débito</h3>
-                <p>Con las tarjetas de crédito y débito podrás comprar en todos los comercios autorizados</p>
+                <img src="../../../assets/images/security.png"  class="img-fluid w-25 mb-4">
+                <h3 class="card-title">100% seguro</h3>
+                <p>Nuestros canales digitales cuentan con la máxima seguridad</p>
             </div>
         </div>
     </div>
@@ -70,41 +75,42 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col-12 text-center" data-aos="fade">
-            <h2 class="section-title mb-3">Nuestros Servicios</h2>
+            <h2 class="section-title mb-3">NUESTROS PLANES</h2>
             </div>
         </div>
         <div class="row align-items-stretch">
-            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4 text-center" data-aos="fade-up">
                 <div class="unit-4">
                   <div class="unit-4-icon">
                     <img src="../../../assets/images/bank/flaticon-svg/svg/001-wallet.svg"  class="img-fluid w-25 mb-4">
                   </div>
                   <div>
                     <h3>Cuentas Corrientes</h3>
-                    <p>Ofrecemos planes que se acomen a tus finanzas</p>
+                    <p>Utiliza tu dinero donde y cuando quieras</p>
                     <p><a href="#">Leer más</a></p>
                   </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4 text-center" data-aos="fade-up" data-aos-delay="100">
                 <div class="unit-4">
                     <div class="unit-4-icon">
                         <img src="../../../assets/images/bank/flaticon-svg/svg/006-credit-card.svg"  class="img-fluid w-25 mb-4">
                     </div>
                     <div>
                         <h3>Tarjeta de crédito</h3>
+                        <p>Compra en el extranjero sin comisión internacional</p>
                         <p><a href="#">Leer más</a></p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="">
+            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4 text-center" data-aos="fade-up" data-aos-delay="">
                 <div class="unit-4">
                     <div class="unit-4-icon">
                     <img src="../../../assets/images/bank/flaticon-svg/svg/003-notes.svg"  class="img-fluid w-25 mb-4">
                     </div>
                     <div>
                     <h3>Inversiones</h3>
-                    <p>Te ofrecemos Fondos Mutuos, Dépositos a plazo y Acciones.</p>
+                    <p>Te ofrecemos fondos Mutuos, depósitos a plazo y acciones.</p>
                     <p><a href="#">Leer más</a></p>
                     </div>
                 </div>
@@ -118,55 +124,54 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col-12 text-center" data-aos="fade-up">
-            <h2 class="section-title mb-3">Nuestros Planes</h2>
+            <h2 class="section-title mb-3">CUENTA CORRIENTE A TU MEDIDA</h2>
             </div>
         </div>
         <div class="row mb-5">
             <div class="col-md-6 mb-4 mb-lg-0 col-lg-4" data-aos="fade-up" data-aos-delay="">
             <div class="pricing">
-                <h3 class="text-center text-black">Plan Cuenta Corriente RCC Universitario</h3>
+                <h3 class="text-center text-black">Plan Universitario</h3>
                 <ul class="list-unstyled ul-check success mb-5">
                     <li>Tarjeta de débito</li>
-                    <li>Tarjeta de crédito</li>
                     <li>Mantención costo 0 por 3 años</li>
                     <li>Múltiples beneficios y descuentos</li>
                 </ul>
-                <p>Plan destinado para universitarios que estén cursando su penúltimo año o último año de universidad</p>
+                <p>Plan destinado para universitarios que estén cursando su penúltimo o último año de universidad</p>
                 <p class="text-center">
-                    <a routerLink="/nuevo-cliente" class="btn btn-secondary">¡Quiero ser cliente!</a>
+                    <a routerLink="/nuevo-cliente" class="btn btn-primary">¡Quiero ser cliente!</a>
                 </p>
             </div>
             </div>
 
             <div class="col-md-6 mb-4 mb-lg-0 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="pricing">
-                    <h3 class="text-center text-black">Plan Cuenta Corriente RCC Clásico</h3>
+                    <h3 class="text-center text-black">Plan Clásico</h3>
                     <ul class="list-unstyled ul-check success mb-5">
                         <li>Tarjeta de débito</li>
                         <li>Tarjeta de crédito</li>
-                        <li>Renta mínima $350.000</li>
-                        <li>Costo Mantención 0.2 UF <small>mensuales</small></li>
+                        <li>Costo Mantención 0.2 UF <small>(mensuales)</small></li>
                         <li>Múltiples beneficios y descuentos</li>
+                        <li>Renta mínima $350.000 líquido</li>
                     </ul>
                     <p class="text-center">
-                        <a routerLink="/nuevo-cliente" class="btn btn-secondary">¡Quiero ser cliente!</a>
+                        <a routerLink="/nuevo-cliente" class="btn btn-primary">¡Quiero ser cliente!</a>
                     </p>
                 </div>
             </div>
 
             <div class="col-md-6 mb-4 mb-lg-0 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="pricing">
-                    <h3 class="text-center text-black">Plan Cuenta Corriente RCC Full</h3>
+                    <h3 class="text-center text-black">Plan Full</h3>
                     <ul class="list-unstyled ul-check success mb-5">
                         <li>Tarjeta de débito</li>
                         <li>Tarjeta de crédito</li>
-                        <li>Renta mínima $1.500.000</li>
-                        <li>Costo Mantención 0</li>
-                        <li>Múltiples beneficios y descuentos premium</li>
-                        <li>Atención preferente</li>
+                        <li>Costo Mantención $0</li>
+                        <li>Múltiples beneficios y descuentos preferentes</li>
+                        <li>Atención premium</li>
+                        <li>Renta mínima $1.500.000 líquido</li>
                     </ul>
                     <p class="text-center">
-                        <a routerLink="/nuevo-cliente" class="btn btn-secondary">¡Quiero ser cliente!</a>
+                        <a routerLink="/nuevo-cliente" class="btn btn-primary">¡Quiero ser cliente!</a>
                     </p>
                 </div>
             </div>
@@ -178,7 +183,7 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col-12 text-center">
-            <h2 class="section-title mb-3">Contáctanos</h2>
+            <h2 class="section-title mb-3">CONTÁCTANOS</h2>
             </div>
         </div>
         <div class="row mb-5">
