--- a/src/app/view/modals/new-destination/new-destination.component.html
+++ b/src/app/view/modals/new-destination/new-destination.component.html
@@ -1,7 +1,7 @@
 <ng-template #modalNewDestination let-d="dismiss">
     <div class="modal-header">
       <h3 class="modal-title"> Crear nuevo destinatario </h3>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModal()"> 
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModalReload()"> 
         <span aria-hidden="true">×</span>
       </button>
     </div>
