Correcciones por subida a S3

--- a/src/app/view/home/header-login-register/header-login-register.component.html
+++ b/src/app/view/home/header-login-register/header-login-register.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="login-menu">
             <ul>
-                <li><a routerLink="/login" routerLinkActive="active" class="section-title">INGRESAR</a></li>
+                <li><a routerLink="/login" routerLinkActive="active" class="section-title" style="color: rgb(189, 30, 35);">INGRESAR</a></li>
             </ul>
         </div>
     </div>
