--- a/src/app/view/home/login/login.component.html
+++ b/src/app/view/home/login/login.component.html
@@ -9,7 +9,7 @@
           <div class="login-title">
             <h2 class="text-center section-title">INGRESA A TU CUENTA</h2>
           </div>
-          <div class="col-md-6 col-lg-7" align="center" style="margin-left: 20%;">
+          <div class="col-md-6 col-lg-7 margin-photo-login">
             <img src="../../../../assets/images/logo_vertical_2.png" alt="" >
           </div>
           <form [formGroup]="login" (ngSubmit)="onSubmit()" #formDirective="ngForm" class="p-5 bg-white">
