--- a/src/app/view/backoffice/account/last-transactions/last-transactions.component.html
+++ b/src/app/view/backoffice/account/last-transactions/last-transactions.component.html
@@ -1,5 +1,5 @@
 <!-- <app-pre-load></app-pre-load> -->
-<app-header-bankoffice></app-header-bankoffice>
+
 <app-side-bar></app-side-bar>
 
 <div class="main-container">
@@ -14,7 +14,7 @@
         <div class="card-box mb-30">
             <div class="card-body">
                 <h2 class="h4 pd-20">Últimos movimientos</h2>
-                <table class="data-table table nowrap" >
+                <table class="data-table table nowrap table-responsive" >
                     <thead>
                         <tr>
                             <th class="table-plus datatable-nosort">Fecha</th>
