--- a/src/app/view/backoffice/transfers/transfers.component.html
+++ b/src/app/view/backoffice/transfers/transfers.component.html
@@ -1,5 +1,5 @@
 <!-- <app-pre-load></app-pre-load> -->
-<app-header-bankoffice></app-header-bankoffice>
+
 <app-side-bar></app-side-bar>
 
 <div class="main-container">
@@ -27,7 +27,7 @@
                         </button>
                     </div>
                 </div>
-                <table class="data-table table nowrap">
+                <table class="data-table table nowrap table-responsive">
                     <thead>
                         <tr>
                             <th>Nombre</th>
