--- a/src/app/view/home/header-home/header-home.component.html
+++ b/src/app/view/home/header-home/header-home.component.html
@@ -1,5 +1,5 @@
 <header class="site-navbar js-sticky-header site-navbar-target" role="banner">
-    <div class="container">
+  <div class="container">
       <div class="row align-items-center">
         <div class="col-6 col-xl-2">
           <h1 class="mb-0 site-logo">
@@ -11,7 +11,7 @@
         <div class="col-12 col-md-10 d-none d-xl-block">
           <nav class="site-navigation position-relative text-right" role="navigation">
             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-              <li><a routerLink="/nuevo-cliente" routerLinkActive="active" class="nav-link">QUIERO SER CLIENTE</a></li>
+              <li><a [routerLink]="['/nuevo-cliente']" routerLinkActive="active" class="nav-link">QUIERO SER CLIENTE</a></li>
               <li><a routerLink="/login" routerLinkActive="active" class="nav-link">INGRESAR</a></li>
             </ul>
           </nav>
