--- a/src/app/view/menu/side-bar/side-bar.component.html
+++ b/src/app/view/menu/side-bar/side-bar.component.html
@@ -1,6 +1,17 @@
-<div class="left-side-bar">
+<div class="header">
+    <div class="header-left">
+        <div class="menu-icon dw dw-menu" (click)="sideBar()"></div>
+    </div>
+    <div class="header-right">
+        <div class="user-info-dropdown" data-bgcolor="#dc3545" data-color="#ffffff" style="color: rgb(255, 255, 255); background-color: rgb(189, 8, 28);">
+            <a role="button" class="ml-2" style="color: white; vertical-align:sub;" (click)="closeSession()" ><span>Cerrar Sesión</span></a>
+        </div>
+    </div>
+</div>
+
+<div class="left-side-bar {{ sidebarMenu.class }}" >
     <div class="brand-logo">
-        <a href="index.html">
+        <a routerLink="/cliente/dashboard">
             <img src="../../../../assets/images/logo_vertical.png" alt="" class="light-logo">
         </a>
         <div class="close-sidebar" data-toggle="left-sidebar-close">
@@ -11,7 +22,7 @@
         <div class="sidebar-menu">
             <ul id="accordion-menu">
                 <li class="dropdown">
-                    <a routerLink="/cliente/dashboard" routerLinkActive="active" class="dropdown-toggle no-arrow">
+                    <a [routerLink]="'/cliente/dashboard'" routerLinkActive="active" class="dropdown-toggle no-arrow">
                         <span class="micon dw dw-house-1"></span><span class="mtext">Inicio</span>
                     </a>
                 </li>
@@ -22,7 +33,7 @@
                     <ul class="submenu" [ngStyle]="{'display': status.accountType}">
                         <li><a routerLink="/cliente/cuenta/recargar-saldo" routerLinkActive="active">Recargar Saldo</a></li>
                         <li><a routerLink="/cliente/cuenta/retiro-saldo" routerLinkActive="active">Retiro de Saldo</a></li>
-                        <li><a routerLink="/cliente/cuenta/ultimos-movimientos" routerLinkActive="active">últimos movimientos</a></li>
+                        <li><a routerLink="/cliente/cuenta/ultimos-movimientos" routerLinkActive="active">Últimos movimientos</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
