Correcciones de acentos y palabras

--- a/src/app/view/backoffice/account/recharge/recharge.component.html
+++ b/src/app/view/backoffice/account/recharge/recharge.component.html
@@ -17,16 +17,16 @@
             <div class="col-md-12 mb-30">
                 <div class="card card-box">
                     <div class="card-body">
-                        <h5 class="card-title weight-500">Depósita dinero en tu Cuenta Corriente </h5>
+                        <h5 class="card-title weight-500">Deposita dinero en tu Cuenta Corriente </h5>
                         <form [formGroup]="recharge" (ngSubmit)="onSubmit()" #formDirective="ngForm">
                             <div class="form-group">
-                                <label>Monto a depósitar</label>
+                                <label>Monto a depositar</label>
                                 <input type="number" formControlName="ammount" class="form-control" placeholder="5000"
                                 [ngClass]="{ 'is-invalid': submitted && f.ammount.errors}" maxlength="10">
                             </div>
                             <div class="row form-group">
                                 <div class="col-md-12">
-                                    <input type="submit" value="Dépositar" class="btn btn-primary btn-md text-white" *ngIf="!load.createRechage">
+                                    <input type="submit" value="Depositar" class="btn btn-primary btn-md text-white" *ngIf="!load.createRechage">
                                     <h6 *ngIf="load.createRechage"> <i class="fa fa-spinner fa-spin"></i> Realizando el depósito, espere por favor</h6>
                                 </div>
                             </div>
