--- a/src/app/view/home/footer-home/footer-home.component.html
+++ b/src/app/view/home/footer-home/footer-home.component.html
@@ -6,7 +6,7 @@
           <div class="col-md-3 ml-auto">
             <h2 class="footer-heading mb-4">Links de interés</h2>
             <ul class="list-unstyled">
-              <li><a href="https://www.sbif.cl/sbifweb/servlet/Portada?indice=0.0" class="smoothscroll">Súperintendencias de bancos e Instituciones financiera </a></li>
+              <li><a href="https://www.sbif.cl/sbifweb/servlet/Portada?indice=0.0" class="smoothscroll">Superintendencias de bancos e Instituciones financiera </a></li>
               <li><a href="https://www.cmfchile.cl/" class="smoothscroll">CMF</a></li>
               <li><a href="#" class="smoothscroll">Sugerencias y Reclamos</a></li>
               <li><a href="#" class="smoothscroll">Tarifas y comisiones</a></li>
