--- a/src/app/view/menu/side-bar/side-bar.component.html
+++ b/src/app/view/menu/side-bar/side-bar.component.html
@@ -23,7 +23,8 @@
             <ul id="accordion-menu">
                 <li class="dropdown">
                     <a [routerLink]="'/cliente/dashboard'" routerLinkActive="active" class="dropdown-toggle no-arrow">
-                        <span class="micon dw dw-house-1"></span><span class="mtext">Inicio</span>
+                        <span class="micon dw dw-house-1"></span><span class="mtext">Inicio 
+                            {{ sidebarMenu.class }}</span>
                     </a>
                 </li>
                 <li class="dropdown" >
