--- a/src/app/view/home/home/home.component.html
+++ b/src/app/view/home/home/home.component.html
@@ -47,18 +47,18 @@
         <div class="row mb-5">
             <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="">
                 <img src="../../../assets/images/bank/flaticon-svg/svg/001-wallet.svg"  class="img-fluid w-25 mb-4">
-                <h3 class="card-title" >Depósita tu dinero</h3>
+                <h3 class="card-title" >Deposita tu dinero</h3>
                 <p>Con tu cuenta corriente podrás guardar, transferir y retirar tu dinero cuando quieras.</p>
             </div>
             <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="100">
                 <img src="../../../assets/images/bank/flaticon-svg/svg/004-cart.svg"  class="img-fluid w-25 mb-4">
                 <h3 class="card-title">Compras online</h3>
-                <p>Con tus tarjetas compra lo que imaginas</p>
+                <p>Con tus tarjetas compra lo que imaginas.</p>
             </div>
             <div class="col-md-4 text-center" data-aos="fade-up" data-aos-delay="200">
                 <img src="../../../assets/images/security.png"  class="img-fluid w-25 mb-4">
                 <h3 class="card-title">100% seguro</h3>
-                <p>Nuestros canales digitales cuentan con la máxima seguridad</p>
+                <p>Nuestros canales digitales cuentan con la máxima seguridad.</p>
             </div>
         </div>
     </div>
@@ -126,7 +126,7 @@
                 <h3 class="text-center text-black">Plan Universitario</h3>
                 <ul class="list-unstyled ul-check success mb-5">
                     <li>Tarjeta de débito</li>
-                    <li>Mantención costo 0 por 3 años</li>
+                    <li>Mantención costo $0 por 3 años</li>
                     <li>Múltiples beneficios y descuentos</li>
                 </ul>
                 <p>Plan destinado para universitarios que estén cursando su penúltimo o último año de universidad</p>
