--- a/src/app/view/modals/new-destination/new-destination.component.html
+++ b/src/app/view/modals/new-destination/new-destination.component.html
@@ -18,7 +18,7 @@
             </div>
           </div>
           <div class="col-md-6 mb-3 mb-md-0">
-            <label class="text-black" for="name">Nombre</label> 
+            <label class="text-black" for="name">Nombre completo</label> 
             <input type="text" formControlName="name" class="form-control" 
             [ngClass]="{ 'is-invalid': submitted && f.name.errors}" maxlength="100" >
           </div>
